@@ -1,3 +1,7 @@
+# This is a Drupal console "chain" file.
+#
+# It is used to define a group of console commands you want to run in succession. It can be used to
+# prepare an existing site (if you have imported a database), or to install Drupal from scratch.
 commands:
 # Install Drupal
   - command: site:install
