@@ -7,6 +7,7 @@ Development
 * Use configurable docroot for php docker container.
 * Bring in foundation with npm and kill off bower.
 * Explicitly require composer/installers to ensure drupal modules, themes, and core always get put in the right place.
+* Refactor circle.yml so only the top section (environment and versions) needs to be changed for most projects.
 
 1.1.0 2017-01-09
 ----------------
